# haytham

./: .env.example  .gitignore  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  VISION.md  mkdocs.yml  pre-merge-fixes.md  pyproject.toml
.claude/hooks/: session-start.sh
.github/workflows/: deploy-docs.yml
docs/: README.md  getting-started.md  how-it-works.md  index.md  roadmap.md  technology.md  troubleshooting.md
docs/adr/: ADR-001-story-to-implementation-pipeline.md  ADR-001a-mvp-spec-enhancement.md  ADR-001b-platform-stack-proposal.md  ADR-001c-system-state-model.md  ADR-001d-story-interpretation-engine.md  ADR-001e-system-design-evolution.md  ADR-001f-task-generation-refinement.md  ADR-001g-implementation-execution.md  ADR-001h-orchestration-feedback-loops.md  ADR-002-backlog-md-integration.md  ADR-003-system-state-evolution.md  ADR-004-multi-phase-workflow-architecture.md  ADR-005-quality-evaluation-pattern.md  ADR-006-story-generation-quality-evaluation.md  ADR-008-ux-improvements.md  ADR-009-workflow-separation.md  ADR-010-stories-export.md  ADR-011-story-effort-estimation.md  ADR-012-visual-roadmap.md  ADR-013-build-vs-buy-recommendations.md  ADR-014-web-search-fallback-chain.md  ADR-015-google-stitch-mcp-integration.md  ADR-016-four-phase-workflow.md  ADR-017-ux-design-four-phase-workflow.md  ADR-018-llm-as-judge-agent-testing.md  ADR-019-system-trait-detection.md  ADR-020-project-rename.md  ADR-021-design-ux-workflow-stage.md  ADR-022-concept-fidelity-pipeline-integrity.md  ADR-023-scorer-dimension-reduction.md  ADR-024-split-oversized-modules.md  ADR-025-resolved-project-specification.md  README.md
docs/architecture/: overview.md  scoring-pipeline.md
docs/blog/: your-agents-are-playing-telephone.md
docs/contributing/: architecture-patterns.md
docs/diagrams/: process-diagram-v2.puml  process-diagram.puml
docs/dogfood/: README.md  haytham-idea-statement.md
docs/example-session/: index.md  project-stories.csv
docs/plans/: 2026-02-16-split-oversized-modules.md  2026-02-19-contributor-backlog-design.md  pre-merge-fixes.md
docs/proposals/: 001-docs-review-and-dogfooding-plan.md  001-implementation-plan.md  blog-post-proposals.md
frontend_streamlit/: Haytham.py
frontend_streamlit/assets/: DESIGN_ASSETS.md  style.css
frontend_streamlit/components/: __init__.py  anchor_review.py  (+9 more)
haytham/: __init__.py  config.py  models.py  telemetry_utils.py
tests/: __init__.py  backlog_cli_tests.py  conftest.py  design_evolution_tests.py  implementation_execution_tests.py  mvp_spec_parser_tests.py  orchestration_tests.py  pipeline_state_tests.py  stack_selection_tests.py  story_interpretation_tests.py  task_generation_tests.py  test_agent_output_quality.py  test_architecture_diff.py  test_backlog_cli.py  test_bedrock_timeout_config.py  test_burr_actions_metadata.py  test_change_request_handler.py  test_claim_origin.py  test_claim_severity.py  test_competitor_recording.py  test_concept_health_bindings.py  test_confidence_rubric.py  test_context_loader.py  test_context_summarizer.py  test_counter_signal_scoring.py  test_design_evolution.py  test_dim8_inputs.py  test_entry_validators.py  test_evidence_validation.py  test_feedback_cascade.py  test_file_context_integration.py  test_formatting_truncation.py  test_founder_persona.py  test_idea_archetype.py  test_implementation_execution.py  test_jtbd_extraction.py  test_jtbd_match.py  test_langfuse_tracer.py  test_model_provider.py  test_mvp_spec_parser.py  (+20 more)
(+228 files in other folders)
